2005-10-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS: Marked Michael Herder as not active. No activity since
	  some time, most email addresses bounce, no response to
	  pings. Changed contact address to the only one that doesn't
	  directly bounce.
	* backend/artec_eplus48u.conf: Added support for UMAX AstraSlim
	  1200 SE (from Harq al-Ada <nadaban.bogdan at gmail.com>).
	* doc/descriptions/artec_eplus48u.desc: UMAX AstraSlim
	  1200 SE is supported. Backend is unmaintained.
	* doc/descriptions/unsupported.desc: Added HP ScanJet
	  4850C. Removed UMAX AstraSlim 1200 SE.
	* backend/gt68xx.c backend/gt68xx_generic.c
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES: Minor
	  modifications to sheet-fed scanner support.
	* backend/mustek_usb2.c backend/mustek_usb2.h
	  backend/mustek_usb2_asic.c backend/mustek_usb2_asic.h
	  backend/mustek_usb2_high.c backend/mustek_usb2_high.h
	  backend/mustek_usb2_reflective.c backend/mustek_usb2_transparent.c
	  doc/descriptions/mustek_usb2.desc
	  doc/mustek_usb2/mustek_usb2.CHANGES:
	  Removed typedefs for DWORD, WORD and so on. Used int, unsigned
	  short, ... directly in the code. 
	* AUTHORS configure configure.in backend/Makefile.in
	  backend/dll.conf backend/lexmark-x1100.c backend/lexmark.c
	  backend/lexmark.conf backend/lexmark.h doc/Makefile.in
	  doc/sane-lexmark.man tools/hotplug/libsane.usermap: Added lexmark
	  backend (from Fred Odendaal <freshshelf@rogers.com>).
	* frontend/tstbackend.c: Added vendor "Lexmark".
	* doc/sane.tex: Added vendor "Lexmark". Used current date.
	* doc/descriptions-external/lexmark.desc
	  doc/descriptions/lexmark.desc: Moved to doc/descriptions. Added
	  "new" marker. Added manpage link. Updated version. Marked X1180
	  as "basic" according to man page.
	* doc/sane.man: Added lexmark backend.
	* backend/Makefile.in doc/Makefile.in tools/Makefile.in: Make
	  "make dist" work again.
	* acinclude.m4 configure include/sane/config.h.in: Check for